[project]
name = "berny"
version = "1.0.0"
description = "Seguimiento de colmenas - Apiario"
requires-python = ">=3.11"
dependencies = [
    "flet",
]

[tool.flet]
product = "Berny"
org = "com.berny"

[tool.flet.app]
path = "src"
module = "main"

[tool.flet.app.startup_screen]
show = true
message = "Iniciando Berny..."

[tool.flet.splash]
color = "#FEF3C7"

[tool.flet.android]
min_sdk_version = 24
target_arch = ["arm64-v8a"]
adaptive_icon_background = "#F5C518"

[tool.flet.android.permissions]
"android.permission.INTERNET" = true
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true
"android.permission.READ_MEDIA_IMAGES" = true
